# mmdetection

./: pyproject.toml
docs/en/: conf.py
docs/zh_cn/: conf.py
mmdet/: __init__.py
mmdet/utils/: collect_env.py
