[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "torch>=1.8",
    "packaging",
]
build-backend = "setuptools.build_meta"

[project]
name = "mmdet"
version = "3.3.0"  # replace with the actual version from mmdet/version.py
description = "OpenMMLab Detection Toolbox and Benchmark"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = "Apache-2.0"
authors = [
    { name = "MMDetection Contributors", email = "openmmlab@gmail.com" },
]
keywords = ["computer vision", "object detection", "deep learning", "openmmlab"]
urls = { Homepage = "https://github.com/open-mmlab/mmdetection" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

# Default runtime dependencies (from requirements/runtime.txt)
dependencies = [
    "matplotlib",
    "numpy",
    "pycocotools",
    "scipy",
    "shapely",
    "six",
    "terminaltables",
    "tqdm",
]

[project.optional-dependencies]
# from requirements/build.txt
build = [
    "cython",
    "numpy",
]

# from requirements/mminstall.txt
mminstall = [
    "mmcv>=2.0.0rc4,<2.2.0",
    "mmengine>=0.7.1,<1.0.0",
]

# from requirements/multimodal.txt
multimodal = [
    "fairscale",
    "jsonlines",
    "nltk",
    "pycocoevalcap",
    "transformers",
]

# from requirements/optional.txt
optional = [
    "cityscapesscripts",
    "emoji",
    "fairscale",
    "imagecorruptions",
    "scikit-learn",
]

# from requirements/tests.txt
tests = [
    "asynctest",
    "cityscapesscripts",
    "codecov",
    "flake8",
    "imagecorruptions",
    "instaboostfast",
    "interrogate",
    "isort==4.3.21",
    "kwarray",  # used for kwarray.group_items, may be ported to mmcv
    "memory_profiler",
    "mmtrack @ git+https://github.com/open-mmlab/mmtracking@dev-1.x",
    "nltk",
    "onnx==1.7.0",
    "onnxruntime>=1.8.0",
    "parameterized",
    "prettytable",
    "protobuf<=3.20.1",
    "psutil",
    "pytest",
    "transformers",
    "ubelt",
    "xdoctest>=0.10.0",
    "yapf",
]

# from requirements/tracking.txt
tracking = [
    "mmpretrain",
    "motmetrics",
    "numpy<1.24.0",
    "scikit-learn",
    "seaborn",
]

# Convenience group for all extras
all = [
    "cython",
    "numpy",
    "mmcv>=2.0.0rc4,<2.2.0",
    "mmengine>=0.7.1,<1.0.0",
    "fairscale",
    "jsonlines",
    "nltk",
    "pycocoevalcap",
    "transformers",
    "cityscapesscripts",
    "emoji",
    "imagecorruptions",
    "scikit-learn",
    "asynctest",
    "codecov",
    "flake8",
    "instaboostfast",
    "interrogate",
    "isort==4.3.21",
    "kwarray",
    "memory_profiler",
    "mmtrack @ git+https://github.com/open-mmlab/mmtracking@dev-1.x",
    "onnx==1.7.0",
    "onnxruntime>=1.8.0",
    "parameterized",
    "prettytable",
    "protobuf<=3.20.1",
    "psutil",
    "pytest",
    "ubelt",
    "xdoctest>=0.10.0",
    "yapf",
    "mmpretrain",
    "motmetrics",
    "seaborn",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["mmdet*"]

[tool.setuptools.cmdclass]
build_ext = "torch.utils.cpp_extension.BuildExtension"
